# next-agent

./: .api_key  .gitignore  ARCHITECTURE.md  LICENSE  NextAgent.spec  README.md  RELEASE_NOTES.md  build_exe.ps1  desktop_entry.py  extract_key.py  pyproject.toml  test_interactive.py  test_reasoning.py  test_regex.py  test_think.py  test_v0.1.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
NextAgentGUI/: .npmrc  design-qa.md  package-lock.json  package.json  vite.config.mjs
NextAgentGUI/src/: App.jsx  core-api.js  en.js  styles.css  zh-CN.js
docs/: architecture.md  auth-architecture.md  secure-architecture.md
docs/innovations/: A-reasoning-extraction.md  B-tool-call-prevalidation.md  C-cross-file-consistency.md  D-cache-dashboard.md  E-cn-en-routing.md  F-skipped-speculative-execution.md  G-progressive-compression.md  H-deterministic-patch.md  I-cost-aware-scheduling.md
docs/reference/: claude-code.md  codewhale.md  deepseek-reasonix.md  hermes-agent.md
docs/v0.2/: 00-roadmap.md  01-multi-provider.md  02-secret-redaction.md  03-message-role.md  04-skill-system.md  05-cross-session-memory.md  06-goal-system.md  07-profiles.md  08-cron-scheduler.md  09-toolset-grouping.md  10-completed.md
installer/: setup.nsi
next_agent/: constitution.json
next_agent/commands/: commit.md  deploy.md  explain.md  pr.md  review.md  skills.md
next_agent/skills/: python-import-check.md
src/next_agent/: __init__.py  agent.py  goal.py  (+26 more)
tests/: test_basic.py  test_gui_server.py  test_streaming.py
(+32 files in other folders)
