[project]
name = "next-agent"
version = "0.1.0"
description = "The best DeepSeek agent for everyone."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Next Agent Contributors"},
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "pywebview>=5.4",
]

[project.scripts]
next-agent = "next_agent.main:main"
na = "next_agent.main:main"
next-agent-gui-api = "next_agent.gui_server:main"
next-agent-desktop = "next_agent.desktop:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
